[tool.poetry]
name = "maplibre"
version = "0.1.3"
description = "Python bindings for MapLibre GL JS"
authors = ["Stefan Kuethe <stefan.kuethe@eoda.de>"]
readme = "README.md"
license = "MIT"
include = [
    { path = "srcjs", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
shiny = "^0.6.1"
htmltools = "^0.5.1"
jinja2 = "^3.1.3"
pydantic = "^2.5.3"
anywidget = "^0.8.1"
pandas = {version = "^2.1.4", optional = true}
geopandas = {version = "^0.14.2", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
pytest = "^7.4.3"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-material = "^9.5.3"
geopandas = "^0.14.2"

[tool.poetry.extras]
all = ["pandas", "geopandas"]

[tool.black]
line-lenght = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
